@@ -42,4 +42,11 @@ namespace std
     string
     messages<char>::do_get(catalog, int, int, const string& __dfault) const
     { return __dfault; }
+
+#ifdef _GLIBCPP_USE_WCHAR_T
+  template<>
+    wstring
+    messages<wchar_t>::do_get(catalog, int, int, const wstring& __dfault) const
+    { return __dfault; }
+#endif
 }
